# recovery-bot

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
launchd/: com.recoverybot.sync.plist
recovery/: __main__.py  config.py
recovery/analysis/: recovery.py
recovery/api/: app.py
recovery/api/routes/: dashboard.py  data.py
recovery/api/templates/: activity.html  index.html
recovery/db/: memory.py  models.py  session.py
recovery/ingest/: garmin.py  strava.py  sync.py
recovery/mcp/: memory_tools.py  server.py
recovery/memory/: db_setup.py  embeddings.py  search.py
tests/: conftest.py  test_analysis.py  test_api.py  test_config.py  test_db.py  test_garmin.py  test_mcp.py  test_memory.py  test_strava.py  test_sync.py
