[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recovery-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.3.2",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "fastmcp>=0.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.9.0",
    "aiofiles>=23.0.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
recovery = "recovery.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["recovery"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = []
